overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@ body::-webkit-scrollbar-thumb {
   background-image: url(../images/backgrounds/service-bg.png), url(../images/backgrounds/service-bg2png.png);
   background-repeat: no-repeat;
   background-position: 9% 19%, 89% 93%;
+  overflow-x: hidden;
 }
 
 .steps__slider {
